# high_performance_jax

./: .gitignore  AGENTS.md  Makefile  README.md  lambda_setup.sh  pyproject.toml  remote_run.sh  single_chip_performance.py
notebooks/: basic_sharding.ipynb  batchnorm_noise_experiment.ipynb  batchnorm_spline_partitions.ipynb  custom_softmax_kernel.ipynb  implicit_all_to_all_via_sharding.ipynb  low_level_jax.ipynb  named_sharding.ipynb  numerics.ipynb  pallas-flash-attn.ipynb  pallas-softmax.ipynb  sharded_dataloader.ipynb  sharding.ipynb  single_chip_performance.ipynb
scripts/: plot_roofline.py  profile_attention.py  roofline_attention.py
src/high_performance_jax/: attn.py  flash_attention.py  model_sharding.py  pallas_add.py  profiling.py  sharded_vmap.py  single_chip_performance.py  sliding_window_attn.py  triton_add.py
src/high_performance_jax/cuda/: Makefile  matrix_add.cu  vector_add.cu  vector_add_simple.cu
src/high_performance_jax/pallas/: benchmarks.py  pallas_add.py  pallas_flash_attn.py  pallas_flash_attn_ref.py  pallas_matmul.py  pallas_matmul_naive.py  pallas_sliding_window_attn.py  pallas_softmax.py  pallas_triton_matmul.py  pallas_triton_matmul_simple.py  simple_kernel_tuner.py
src/high_performance_jax/triton/: flash_attention.py  load_store_example.py  triton_add.py
