[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "high-performance-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "jax==0.8.3",
    #"tensorboard-plugin-profile>=2.19.5", # Disabled due to incompatibility issue
    "tensorflow>=2.19.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "tqdm>=4.67.1",
    "lax>=1.0.0",
    "deepkit",
    "flax>=0.12.2",
    "xprof>=0.0.8",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]==0.8.3",
    "triton>=3.3.0 ; sys_platform == 'linux'",
    "nvidia-cusparse>=12.7.2.19",
    "flash-attn-jax",
    "einops",
]
tpu = [
    "libtpu",
    "cloud-tpu-client>=0.10",
]
dev = [
    "high-performance-jax",
]

[tool.hatch.build]
packages = ["src/high_performance_jax"]

[tool.uv.sources]
deepkit = { path = "../deepkit" }
libtpu = { url = "https://storage.googleapis.com/libtpu-nightly-releases/wheels/libtpu/libtpu-0.0.16.dev20250522+nightly-py3-none-manylinux_2_31_x86_64.whl" }
high-performance-jax = { workspace = true }
